harvester log ui, current harvester status ui, fix qtip2 overflow, gold standard message on-hover

--- a/arms/src/assets/less/overwrite.less
+++ b/arms/src/assets/less/overwrite.less
@@ -1,6 +1,6 @@
 .chzn-container-single .chzn-single{height:26px;text-align:left;}
 .chzn-drop{text-align:left;}
-
+select{max-width:220px;width:auto;}
 .dl-horizontal{
 	dt{
 		line-height:20px;
